apps/base/home-assistant/zigbee2mqtt/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: home-assistant
spec:
  selector:
    app: zigbee2mqtt
  ports:
    - name: http-z2m
      protocol: TCP
      port: 8080
      targetPort: http-z2m
