apps/base/home-assistant/zigbee2mqtt/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
  namespace: home-assistant
spec:
  ingressClassName: traefik
  rules:
    - host: z2m.localho.st
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zigbee2mqtt
                port:
                  name: http-z2m
