apps/base/home-assistant/zigbee2mqtt/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigbee2mqtt-route
  namespace: home-assistant
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - z2m.localho.st
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: zigbee2mqtt
          port: 8080
